Fix z-index for navbar

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -5,7 +5,7 @@ header {
   left: 0;
   height: 10vh;
   background-color: transparent;
-  z-index: 10;
+  z-index: 15;
   padding: 0 1rem;
   transition: background-color 0.3s ease-in-out;
   @media screen and (min-width: 1024px) {
